Fix align-items position & remove ul margin
Change (align-items: center) to center items instead of the whole
header & remove the margin for ul

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -14,7 +14,6 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 8px;
 }
 
@@ -52,9 +51,11 @@ ul {
   display: flex;
   gap: 16px;
   padding: 0px;
+  margin: 0px;
 }
 
 .left-side, .right-side{
   display:flex;
   gap: 16px;
+  align-items: center;
 }
